Changed video URL for offer vieo and adjusted font sizes in the footer.

--- a/uef_landing_page.html
+++ b/uef_landing_page.html
@@ -20,7 +20,7 @@
             </div>
             <hr>
             <div id="video-container">
-                <iframe height="100%" width="100%" src="https://www.youtube.com/embed/gUDjn5TwYmU?rel=0&amp;modestbranding=1&amp;autoplay=1" frameborder="0" frameborder="0" allowfullscreen></iframe>
+                <iframe height="100%" width="100%" src="https://youtube.com/embed/DZYYjXp5Uf0?controls=1&amp;rel=0&amp;modestbranding=1&amp;autoplay=1" allow="autoplay;" frameborder="0" allowfullscreen></iframe>
                 <!-- <iframe src="https://iframe.mediadelivery.net/embed/21811/9b134c0e-0eb3-49ad-a750-1ea3dcd39cf0?autoplay=true" loading="lazy" style="border: none; position: absolute; top: 0; height: 100%; width: 100%;" allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;" allowfullscreen="true"></iframe> -->
             </div>
             <button class="button" onclick="enrollNav()">ENROLL NOW</button>
@@ -33,7 +33,7 @@
                 </p>
             </div>
             <div>
-                
+
             </div>
             <h1>COURSE BREAKDOWN:</h1>
             <div id="breakdown-container">
