--- a/uef_landing_page.html
+++ b/uef_landing_page.html
@@ -9,7 +9,15 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="uef_landing_page_styles.css">
-        <title>ULTIMATE Unreal Engine for Filmmakers Bundle</title>
+        <!-- Website share thumbnail setup -->
+        <meta property='og:title' content='Boundless-Resource.com'/>
+        <meta property='og:image' content='uef_landing_page_img/thumbnail.jpg'/>
+        <meta property='og:description' content='Boundless Entertainment courses give you direct insight into real projects and teach you real solutions for creating cinematic, Hollywood-level visuals.'/>
+        <meta property='og:url' content='https://boundless-resource.com/uef_landing_page.html'/>
+        <meta property='og:image:width' content='1920'/>
+        <meta property='og:image:height' content='816'/>
+        <meta property='og:type' content='website'/>
+        <title>Unreal Engine for Filmmakers Course | Boundless Entertainment</title>
     </head>
     <body>
         <div class="main-container">
