--- a/uef_landing_page.html
+++ b/uef_landing_page.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="uef_landing_page_styles.css">
+        <link rel="icon" href="uef_landing_page_img/favicon.png">
         <!-- Website share thumbnail setup -->
         <meta property='og:title' content='Boundless-Resource.com'/>
         <meta property='og:image' content='uef_landing_page_img/thumbnail.jpg'/>
@@ -19,6 +20,35 @@
         <meta property='og:type' content='website'/>
         <title>Unreal Engine for Filmmakers Course | Boundless Entertainment</title>
     </head>
+    <nav class="nav-bar">
+        <div class="logo"></div>
+        <div class="options">
+            <ul>
+                <li><a>HOME</a></li>
+                <li>
+                    <div class="dropdown">
+                        <button onclick="expand()" class="dropbtn">COURSES</button>
+                        <div class="dropdown-content">
+                            <a href="">COURSE CATALOG</a>
+                            <a href="">COURSE BUNDLES</a>
+                            <a href="">MEMBERSHIPS</a>
+                        </div>
+                    </div>
+                </li>
+                <li><a>DASHBOARD</a></li>
+                <li><a>GEMINI</a></li>
+                <li>
+                    <div class="dropdown">
+                        <button onclick="expand()" class="dropbtn">ABOUT US</button>
+                        <div id="myDropdown" class="dropdown-content">
+                            <a href="">ON-SET SERVICES</a>
+                        </div>
+                    </div>
+                </li>
+                <li><a>CONTACT US</a></li>
+            </ul>
+        </div>
+    </nav>
     <body>
         <div class="main-container">
             <h1 style="text-shadow: 1px 1px 2px black, 0 0 25px grey, 0 0 5px darkgrey;">UNREAL ENGINE FOR FILMMAKERS</h1>
