Finished styling the navbar. Still waiting on navbar logo to be sent over.

--- a/uef_landing_page.html
+++ b/uef_landing_page.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="uef_landing_page_styles.css">
         <link rel="icon" type="image/png" href="uef_landing_page_img/favicon.png">
         <!-- Website share thumbnail setup -->
@@ -25,7 +26,9 @@
 
 
         <nav class="nav-bar">
-            <div class="logo"></div>
+            <div class="logo">
+                <h1 style="color: black;">Boundless Entertainment</h1>
+            </div>
             <div class="options">
                 <ul>
                     <div>
@@ -34,7 +37,7 @@
                     <div class="dropdown">
                         <li>
                             <div>
-                                <button onclick="expand()" class="dropbtn"><a class="nav-link">COURSES</a></button>
+                                <button onclick="expand()" class="dropbtn"><a class="nav-link">COURSES <i class="fa fa-caret-down"></i></a></button>
                                 <div class="dropdown-content">
                                     <a class="nav-link" href="">COURSE CATALOG</a>
                                     <a class="nav-link" href="">COURSE BUNDLES</a>
@@ -52,7 +55,7 @@
                     <div class="dropdown">
                         <li>
                             <div>
-                                <button onclick="expand()" class="dropbtn"><a class="nav-link">ABOUT US</a></button>
+                                <button onclick="expand()" class="dropbtn"><a class="nav-link">ABOUT US <i class="fa fa-caret-down"></i></a></button>
                                 <div id="myDropdown" class="dropdown-content">
                                     <a class="nav-link" href="">ON-SET SERVICES</a>
                                 </div>
