Added the logo to the navbar.

--- a/uef_landing_page.html
+++ b/uef_landing_page.html
@@ -27,7 +27,7 @@
 
         <nav class="nav-bar">
             <div class="logo">
-                <h1 style="color: black;">Boundless Entertainment</h1>
+                <img style="height: 100%; width: 100%;" src="uef_landing_page_img/be_logo.png">
             </div>
             <div class="options">
                 <ul>
