Tested all links for the page.

--- a/uef_landing_page.html
+++ b/uef_landing_page.html
@@ -232,7 +232,7 @@
                 <div class="footer-option">
                     <h1>CONTACT US</h1>
                     <hr>
-                    <h2><a href="">eisenhower.films@gmail.com</a></h2>
+                    <h2><a>eisenhower.films@gmail.com</a></h2>
                 </div>
                 <div class="footer-option">
                     <h1>SUPPORT</h1>
