--- a/uef_landing_page.html
+++ b/uef_landing_page.html
@@ -98,6 +98,21 @@
                     For a breakdown of the course, watch the full video above or view the course breakdown below. Enroll now to gain lifetime access to this ever-expanding training and community for just $199.99 (normally $299.99). Offer expires soon!
                 </p>
             </div>
+            <h2 style="text-align: left; padding-left: 5px;">COURSE INFO</h2>
+            <div class="faq-container">
+                <p align="justify">
+                    Enrolling in the Unreal Engine for Filmmakers Course will grant you instant, lifetime access to a rapidly growing curriculum designed to take you on the most efficient path from where you are right now (beginner, intermediate, or experienced professional) to a fully-equipped creative with the knowledge to tackle, build, animate, or realize any story you wish to tell using one of the fastest-growing tools in the film industry.
+                </p>
+                <br>
+                <p align="justify">
+                    This course is delivered in a go-at-your-own pace format via pre-recorded online video lessons. The instructor is available to answer questions or concerns any time through email (eisenhower.films@gmail.com), via the <a href="https://boundless-resource.com/contact-us/">Contact Us</a> page on the website, or by leaving a comment on the video lesson about which you have questions.
+                </p>
+                <br>
+                <p align="justify">
+                    Please check out our <a href="https://boundless-resource.com/faq/">FAQ Page</a> to learn more about our policies, how to get in touch, and other frequently asked questions regarding details about the course!
+                </p>
+                <br>
+            </div>
             <div>
 
             </div>
