Added description meta tag as well as facebook (meta) pixel.

--- a/uef_landing_page.html
+++ b/uef_landing_page.html
@@ -20,6 +20,25 @@
         <meta property='og:image:height' content='816'/>
         <meta property='og:type' content='website'/>
         <title>Unreal Engine for Filmmakers Course | Boundless Entertainment</title>
+        <meta name="description" content="Learn to create cinematic, Hollywood-level visual effects using free, cutting-edge software in just 10 days with the Unreal Engine for Filmmakers course. Enroll now."/>
+        <!-- Facebook Pixel Code -->
+        <script>
+            !function(f,b,e,v,n,t,s)
+          {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+          n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+          if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+          n.queue=[];t=b.createElement(e);t.async=!0;
+          t.src=v;s=b.getElementsByTagName(e)[0];
+          s.parentNode.insertBefore(t,s)}(window, document,'script',
+          'https://connect.facebook.net/en_US/fbevents.js');
+          fbq('init', '458945659498620');
+          fbq('track', 'PageView');
+        </script>
+        <noscript>
+            <img height="1" width="1" style="display:none"
+               src="https://www.facebook.com/tr?id=458945659498620&ev=PageView&noscript=1"/>
+        </noscript>
+        <!-- End Facebook Pixel Code -->
     </head>
     
     <body>
