--- a/uef_landing_page.html
+++ b/uef_landing_page.html
@@ -49,6 +49,9 @@
                     <div>
                         <li><a href="https://boundless-resource.com/gemini/" class="nav-link">GEMINI</a></li>
                     </div>
+                    <div>
+                        <li><a href="https://boundless-resource.com/faq/" class="nav-link">FAQ</a></li>
+                    </div>
                     <div class="dropdown">
                         <li>
                             <div>
@@ -95,7 +98,7 @@
             <h2 style="text-align: left; padding-left: 5px;">COURSE INFO</h2>
             <div class="faq-container">
                 <p align="justify">
-                    Enrolling in the Unreal Engine for Filmmakers Course will grant you instant, lifetime access to a rapidly growing curriculum designed to take you on the most efficient path from where you are right now (beginner, intermediate, or experienced professional) to a fully-equipped creative with the knowledge to tackle, build, animate, or realize any story you wish to tell using one of the fastest-growing tools in the film industry.
+                    Enrolling in the Unreal Engine for Filmmakers Course will grant you instant, lifetime access to a rapidly growing curriculum designed to take you on the most efficient path from where you are right now (beginner, intermediate, or experienced professional) to a fully-equipped creative with the knowledge to tackle, build, animate, or realize any story you wish to tell using one of the fastest-growing tools in the film industry. Enrolling will also give you access to a private Facebook community where you can ask questions about the course, share your work, get feedback, and connect with other artists!
                 </p>
                 <br>
                 <p align="justify">
