Changed all pictures over to webp format as suggested by google page speed.

--- a/uef_landing_page.html
+++ b/uef_landing_page.html
@@ -14,7 +14,7 @@
         <link rel="icon" type="image/png" href="uef_landing_page_img/favicon.png">
         <!-- Website share thumbnail setup -->
         <meta property='og:title' content='Boundless-Resource.com'/>
-        <meta property='og:image' content='uef_landing_page_img/thumbnail.jpg'/>
+        <meta property='og:image' content='uef_landing_page_img/thumbnail.webp'/>
         <meta property='og:description' content='Boundless Entertainment courses give you direct insight into real projects and teach you real solutions for creating cinematic, Hollywood-level visuals.'/>
         <meta property='og:url' content='https://boundless-resource.com/ultimate-unreal-engine-for-filmmakers-bundle-build/'/>
         <meta property='og:image:width' content='1920'/>
@@ -186,7 +186,7 @@
             <div class="testimonials-container">
                 <div class="testimonial-left">
                     <div class="thumbnail-container">
-                        <img class="testimonial-thumbnail" src="uef_landing_page_img/Jake_IG.png">
+                        <img class="testimonial-thumbnail" src="uef_landing_page_img/Jake-IG_v2.webp">
                     </div>
                     <div class="testimonial-text">
                         <p>
@@ -208,7 +208,7 @@
                 <div style="flex: 1 25px"></div>
                 <div class="testimonial-right">
                     <div class="thumbnail-container">
-                        <img class="testimonial-thumbnail" src="uef_landing_page_img/Hussin_LinkedIn_Fixed.jpg">
+                        <img class="testimonial-thumbnail" src="uef_landing_page_img/Hussin_LinkedIn_Fixed_v3.webp">
                     </div>
                     <div class="testimonial-text">
                         <p>“I came across Sam’s YouTube channel while looking for VFX based Unreal Engine content. I was intrigued
@@ -281,7 +281,7 @@
 
             for (var i = 0; i < videos.length; i++) { 
                 //var source = "https://img.youtube.com/vi/"+ videos[i].dataset.embed +"/sddefault.jpg";
-                var source = "uef_landing_page_img/" + videos[i].dataset.embed + ".jpg";
+                var source = "uef_landing_page_img/" + videos[i].dataset.embed + ".webp";
 	            // Load the image asynchronously 
 	            var image = new Image();
 		        image.src = source;
